api de cadastro e login funcional

--- a/Entre Caçadores, Colossos e Baldurianos/public/index.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/index.html
@@ -11,6 +11,16 @@
 
   <div class="nav">
 
+ <li class="agora">
+            <a href="#">Inicial</a>
+          </li>
+          <li>
+            <a href="login.html">Login</a>
+          </li>
+          <li>
+            <a href="cadastro.html">Cadastro</a>
+          </li>
+
         <h1>Entre Caçadores, Colossos e Baldurianos</h1>
     
         <div>
