detalhes da cidade

--- a/Entre Caçadores, Colossos e Baldurianos/public/yharnam.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/yharnam.html
@@ -16,16 +16,100 @@
         <div class="yharnam">
             <div class="fundoMascarado"></div>
             <div class="container">
+                <p class="descricaoJogo">Yharnam Central é onde a jornada em Bloodborne realmente começa. Uma cidade
+                    silenciosa e opressiva, tomada pela névoa, pela decadência e pelo medo. Suas ruas estreitas e
+                    construções góticas criam um labirinto onde cada sombra parece esconder algo — ou alguém — à
+                    espreita. Não é apenas um cenário, mas um aviso: o mundo aqui é hostil, e sobreviver exige atenção,
+                    coragem e adaptação. O jogador é lançado nesse ambiente sem garantias, aprendendo, aos poucos, que a
+                    verdadeira ameaça não está apenas nas criaturas, mas na própria cidade que, viva ou morta, observa a
+                    caçada acontecer.
+
+                </p>
+
+            </div>
+        </div>
+
+        <div class="janela">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
+
+
+                <button class="botao" onclick="tocarMusica()">Bater na janela</button>
+            </div>
+        </div>
+
+        <div class="cidade">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
+                <p class="descricaoJogo">Pelas ruas, os habitantes que restam já não são mais humanos — suas mentes
+                    consumidas pela praga transformaram-nos em feras deformadas, caçadores enlouquecidos e criaturas
+                    hostis que rondam em patrulhas desordenadas, armados com tochas, forquilhas e a fúria cega de quem
+                    perdeu tudo, menos o ódio. Cada esquina é uma armadilha silenciosa, onde a imprudência é rapidamente
+                    punida.</p>
+
+
+            </div>
+        </div>
+
+        <div class="padre">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
                 <p class="descricaoJogo">Um refúgio silencioso entre a vida e a morte. No Sonho do Caçador, o caçador
                     repousa, aprimora suas habilidades
                     e se prepara para a próxima caçada. Um espaço onírico e sereno, onde o tempo parece não passar — mas
                     que, no fim,
                     revela sua verdadeira e melancólica natureza.</p>
 
-                <button class="botao" onclick="tocarMusica()">Música</button>
+                <button class="botao" onclick="tocarMusica()">Bater na porta</button>
             </div>
-
         </div>
+
+        <div class="padre">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
+                <p class="descricaoJogo">Em meio às ruas de Yharnam, surge uma figura familiar, mas nada acolhedora.
+                    Armado e atento, Father Gascoigne é um caçador como você — ou, talvez, aquilo em que todo caçador
+                    inevitavelmente se torna.</p>
+
+                <button class="botao" onclick="tocarMusica()">Bater na porta</button>
+            </div>
+        </div>
+
+        <div class="padre">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
+                <p class="descricaoJogo">Em meio às ruas de Yharnam, surge uma figura familiar, mas nada acolhedora.
+                    Armado e atento, Father Gascoigne é um caçador como você — ou, talvez, aquilo em que todo caçador
+                    inevitavelmente se torna.</p>
+
+                <button class="botao" onclick="tocarMusica()">atacar</button>
+            </div>
+        </div>
+
+        <div class="padre">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
+                <p class="descricaoJogo">Ao encontrar um corpo no mesmo local, um broche vermelho brilhante, familiar, é encontrado.</p>
+
+                <button class="botao" onclick="pegar()">Pegar item</button>
+            </div>
+        </div>
+
+        <div class="capela">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
+                <p class="descricaoJogo">Em meio às ruas de Yharnam, surge uma figura familiar, mas nada acolhedora.
+                    Armado e atento, Father Gascoigne é um caçador como você — ou, talvez, aquilo em que todo caçador
+                    inevitavelmente se torna.</p>
+
+                <button class="botao" onclick="tocarMusica()">atacar</button>
+            </div>
+        </div>
+
+
+
+
+    </div>
 
 </body>
 
