colocando uma nova introduão a bloodborne

--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
@@ -4,248 +4,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bloodborne</title>
     <link rel="stylesheet" href="./css/style.css">
+    <title>Document</title>
 </head>
 
-<body class="pgBloodborne">
+<body>
 
 
-    <div class="navBloodborne">
-        <div class="discernimento">
-            <div id="div_discernimento"></div>
-            <img src="./imagens/assets/bloodborne/bloodborne_discernimento.png" alt="">
+    <div class="nav">
+
+        <li class="agora">
+            <a href="#">Inicial</a>
+        </li>
+        <li>
+            <a href="login.html">Login</a>
+        </li>
+        <li>
+            <a href="cadastro.html">Cadastro</a>
+        </li>
+
+        <h1>Bloodborne</h1>
+
+        <div>
+
+            <hr>
+
         </div>
+
     </div>
 
     <div class="conteudo">
 
-        <div class="introBlood">
-            <div class="fundoMascarado4"></div>
-            <div class="fundoMascarado3"></div>
-            <div class="fundoMascarado2"></div>
-            <div class="fundoMascarado1"></div>
-            <div class="fundoMascarado10"></div>
-
-            <div class="container">
-                <button class="botao" id="botao">Acordar</button>
-                <input type="text" id="nomeJogador" placeholder="Digite seu nome...">
-                <div id="div_legenda"></div>
-
-                <audio id="minister">
-                    <source src="./assets/audios/Bloodborne - Opening Cutscene.mp3" type="audio/mp3">
-                </audio>
-                <audio id="minister2">
-                    <source src="./assets/audios/Bloodborne - Opening Cutscene2.mp3" type="audio/mp3">
-                </audio>
-            </div>
-        </div>
-
-        <div class="espaco"></div>
-
-        <div class="lobo">
-            <div class="fundoMascarado6"></div>
-            <div class="fundoMascarado5"></div>
-            <div class="fundoMascarado11"></div>
-
-            <div class="container">
-                <button class="botao" onclick="atacar()">Atacar</button>
-            </div>
-
-            <audio id="morreu">
-                <source src="./assets/audios/bloodborne_morte.mp3" type="audio/mp3">
-            </audio>
-
-            <audio id="location">
-                <source src="./assets/audios/Bloodborne ｜ New Location [Sound Effect].mp3" type="audio/mp3">
-            </audio>
-
-        </div>
-
-        <div class="yharnam">
-            <div class="fundoMascarado9"></div>
-            <div class="fundoMascarado8"></div>
-            <div class="fundoMascarado7"></div>
-
-            <div class="container">
-                <button class="botao" onclick="atravessar()">Atravessar ponte</button>
-            </div>
-        </div>
         <div>
 
+            Desenvolvido pela grandiosa Fromsoftware, Bloodborne mostra com primor como contar histórias sem o uso de
+            uma narrativa convencional, sendo a principal ferramenta, a direção de arte.
+
         </div>
+
+        <div>
+
+            De início, as ordens são claras, cace e não faça perguntas, não é necessário. Afinal, somos apenas caçadores
+            de feras
+
+        </div>
+
+        <div>
+
+            <h2>Contexto</h2>
+
+            <div>
+                Yharnam, outrora uma cidade esquecida, tornou-se o centro das atenções do mundo após a descoberta de um
+                líquido milagroso: um sangue capaz de curar todas as enfermidades conhecidas. A promessa de cura atraiu
+                peregrinos, estudiosos e desesperados de todas as partes, transformando a cidade em um polo de medicina
+                e esperança. Contudo, por trás desse aparente milagre, escondem-se segredos obscuros e horrores
+                indescritíveis que lentamente emergem das entranhas da cidade.
+            </div>
+
+        </div>
+
+        <div>
+            <h2>Direção de Arte: A Cidade que Conta a História</h2>
+            <div>
+                Em Bloodborne, cada rua, prédio e criatura transmite parte da narrativa. A arquitetura gótica, os becos
+                escuros e as ruas vazias falam sobre a decadência de Yharnam. Não há necessidade de longas falas: o
+                ambiente é quem guia o jogador.
+                O uso de cores frias, iluminação sombria e sons distantes cria uma atmosfera opressiva e misteriosa que
+                se comunica diretamente com o jogador.
+            </div>
+        </div>
+
+        <div>
+            <h2>Mecânicas que Reforçam a Narrativa</h2>
+            <div>
+                Bloodborne quebra com convenções tradicionais, eliminando escudos e incentivando a agressividade. O
+                combate rápido, visceral e sangrento não é só mecânico, mas uma extensão da própria ambientação.
+                A regeneração de vida ao atacar, por exemplo, transmite a ideia de sobrevivência a qualquer custo.
+                Até as armas transformáveis mostram o quanto adaptação é essencial para quem ousa caçar as feras.
+            </div>
+        </div>
+
+        <div>
+            <h2>O Horror Cósmico e o Medo do Desconhecido</h2>
+            <div>
+                À medida que o jogador avança, a narrativa de Bloodborne se transforma, indo do horror gótico clássico
+                ao terror cósmico inspirado na obra de H.P. Lovecraft.
+                Criaturas incompreensíveis, planos de existência ocultos e segredos esquecidos revelam que os
+                verdadeiros monstros não são as feras, mas aquilo que a mente humana não pode compreender.
+            </div>
+        </div>
+
+        <div class="areas">
+            <h2>Principais Locais de Yharnam e Além</h2>
+            <div class="container">
+                <div class="area central">
+                    <h3>Distrito Central</h3>
+                    O coração de Yharnam, onde os primeiros passos do Caçador são dados. Ruas labirínticas, arquitetura
+                    gótica e uma sensação constante de claustrofobia dominam este espaço.
+                </div>
+
+                <div class="area antiga">
+                    <h3>Velho Yharnam</h3>
+
+                    Uma parte da cidade consumida pelo fogo, isolada para conter a praga das feras. Caminhar por essas
+                    ruínas é testemunhar o desespero de uma cidade que sacrificou seus próprios cidadãos.
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="area catedral">
+                    <h3>Catedral e o Bairro da Igreja</h3>
+
+                    O epicentro das experiências com o sangue sagrado, lar da Igreja da Cura. Aqui, os mistérios sobre a
+                    origem do sangue e sua verdadeira natureza começam a ser revelados.
+                </div>
+
+                <div class="area academia">
+                    <h3>Academia de Byrgenwerth</h3>
+                    Um antigo centro acadêmico onde tudo começou. Foi em Byrgenwerth que os estudiosos descobriram os
+                    restos
+                    da Grande Cidadela subterrânea e o sangue antigo, desencadeando a tragédia que assolou Yharnam.
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="area mensis">
+                    <h3>O Pesadelo de Mensis</h3>
+                    Criado pelos estudiosos da Escola de Mensis, liderados por Micolash, este pesadelo é uma dimensão
+                    distorcida, cheia de horrores cósmicos. A tentativa desesperada da escola de entrar em contato com
+                    entidades superiores levou à loucura e à corrupção.
+                </div>
+
+
+
+                <div class="area sonho">
+                    <h3>O Sonho do Caçador</h3>
+                    Um refúgio etéreo onde o Caçador repousa e se prepara. Guiado por Gehrman e pela Boneca, é um espaço
+                    de
+                    descanso e reflexão, mas também um lembrete de que a caçada jamais termina.
+                </div>
+            </div>
+
+            <div class="container">
+
+                <div class="area yahargul">
+                    <h3>Yahar'gul</h3>
+                    Yahar'gul, a Vila Invisível
+                    Um local oculto onde cultistas realizam rituais insanos em busca de transcendência. Estruturas
+                    retorcidas e horrores cósmicos revelam a face mais sombria de Yharnam.
+                </div>
+
+                <div class="area pesadelo">
+                    <h3>O Pesadelo do Caçador</h3>
+                    Uma dimensão onírica onde os caçadores aprisionados vivem e morrem eternamente, presos pela maldição
+                    do
+                    sangue. Este local reflete o sofrimento e a glória daqueles que dedicaram suas vidas à caçada.
+                </div>
+
+            </div>
+        </div>
+
+        <div>
+            <h2>A Figura do Caçador</h2>
+            <div>
+                Sem nome ou passado, o Caçador representa o jogador inserido nessa espiral de loucura.
+                A sua jornada é marcada não por palavras, mas por sangue, escolhas e descobertas feitas no silêncio das
+                ruas vazias de Yharnam.
+            </div>
+        </div>
+
 
 
     </div>
 
+
 </body>
 
 </html>
-
-<script>
-
-    var discernimento = parseInt(localStorage.getItem('discernimento')) || 0;
-    div_discernimento.innerHTML = discernimento;
-
-    var temArma = parseInt(localStorage.getItem('temArma')) || 0;
-
-    var botao = document.getElementById("botao");
-    botao.onclick = acordar;
-
-    function acordar() {
-        var audio = document.getElementById("minister");
-        var botao = document.getElementById("botao");
-        var nomeInput = document.getElementById("nomeJogador");
-
-        audio.play();
-        div_legenda.innerHTML = "Ah sim... Sangue-pálido";
-
-        setTimeout(() => {
-            document.querySelector('.fundoMascarado10').style.opacity = 0;
-            document.querySelector('.fundoMascarado1').style.opacity = 1;
-        }, 500);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "";
-        }, 3500);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Bem, você veio ao lugar certo.";
-        }, 7000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Yharnam é o lar do sacerdócio de sangue.";
-        }, 10600);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Você só precisa desvendar seu mistério.";
-        }, 14000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "";
-        }, 16800);
-
-        setTimeout(() => {
-            document.querySelector('.fundoMascarado1').style.opacity = 0;
-            document.querySelector('.fundoMascarado2').style.opacity = 1;
-        }, 17000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Mas por onde um estrangeiro como você começará?";
-        }, 18500);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "";
-        }, 22000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Claro, com um pouco de seu próprio sangue de Yharnam...";
-        }, 23800);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "";
-        }, 27000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Mas antes, você precisará de um contrato...";
-        }, 29500);
-
-        setTimeout(() => {
-            nomeInput.classList.add('show');
-            botao.innerText = "Assinar";
-            botao.onclick = assinar;
-        }, 33500);
-    }
-
-    function assinar() {
-        var audio = document.getElementById("minister2");
-        var botao = document.getElementById("botao");
-
-        audio.play();
-        div_legenda.innerHTML = "Bom. Tudo assinado e selado.";
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "";
-        }, 4500);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Agora, vamos começar a transfusão. Ah, não se preocupe.";
-        }, 6000);
-
-        setTimeout(() => {
-            document.querySelector('.fundoMascarado2').style.opacity = 0;
-            document.querySelector('.fundoMascarado3').style.opacity = 1;
-        }, 8000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "";
-        }, 12000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "Aconteça o que acontecer... Talvez pareça um mero sonho ruim...";
-        }, 14000);
-
-        setTimeout(() => {
-            document.querySelector('.fundoMascarado3').style.opacity = 0;
-            document.querySelector('.fundoMascarado4').style.opacity = 1;
-        }, 15000);
-
-        setTimeout(() => {
-            div_legenda.innerHTML = "";
-            document.querySelector('.fundoMascarado4').style.opacity = 0;
-            document.querySelector('.fundoMascarado10').style.opacity = 1;
-        }, 20000);
-
-
-    }
-
-    function atacar() {
-        var audio1 = document.getElementById("morreu");
-        var audio2 = document.getElementById("location");
-
-
-        if (temArma >= 1) {
-            setTimeout(() => {
-                document.querySelector('.fundoMascarado5').style.opacity = 0;
-                document.querySelector('.fundoMascarado11').style.opacity = 1;
-            }, 1000);
-
-            setTimeout(() => {
-                audio2.play();
-            }, 1000);
-
-
-            setTimeout(() => {
-                window.location.href = "yharnam.html";
-            }, 7000);
-        }
-
-        else {
-            setTimeout(() => {
-                document.querySelector('.fundoMascarado5').style.opacity = 0;
-                document.querySelector('.fundoMascarado6').style.opacity = 1;
-            }, 1000);
-
-            setTimeout(() => {
-                audio1.play();
-            }, 1000);
-
-
-            setTimeout(() => {
-                window.location.href = "dream.html";
-            }, 7000);
-        }
-
-    }
-    function atravessar() {
-        if (discernimento == 1) {
-            return
-        }
-
-        discernimento++;
-        div_discernimento.innerHTML = discernimento;
-        localStorage.setItem('discernimento', discernimento);
-    }
-
-
-</script>
