--- a/Entre Caçadores, Colossos e Baldurianos/public/index.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/index.html
@@ -21,7 +21,7 @@
             <a href="cadastro.html">Cadastro</a>
           </li>
 
-        <h1>Entre Caçadores, Colossos e Baldurianos</h1>
+        <h1>A Beleza do Desconhecido</h1>
     
         <div>
     
