--- a/Entre Caçadores, Colossos e Baldurianos/public/yharnam.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/yharnam.html
@@ -51,29 +51,7 @@
             </div>
         </div>
 
-        <div class="padre">
-            <div class="fundoMascarado1"></div>
-            <div class="container">
-                <p class="descricaoJogo">Um refúgio silencioso entre a vida e a morte. No Sonho do Caçador, o caçador
-                    repousa, aprimora suas habilidades
-                    e se prepara para a próxima caçada. Um espaço onírico e sereno, onde o tempo parece não passar — mas
-                    que, no fim,
-                    revela sua verdadeira e melancólica natureza.</p>
 
-                <button class="botao" onclick="tocarMusica()">Bater na porta</button>
-            </div>
-        </div>
-
-        <div class="padre">
-            <div class="fundoMascarado1"></div>
-            <div class="container">
-                <p class="descricaoJogo">Em meio às ruas de Yharnam, surge uma figura familiar, mas nada acolhedora.
-                    Armado e atento, Father Gascoigne é um caçador como você — ou, talvez, aquilo em que todo caçador
-                    inevitavelmente se torna.</p>
-
-                <button class="botao" onclick="tocarMusica()">Bater na porta</button>
-            </div>
-        </div>
 
         <div class="padre">
             <div class="fundoMascarado1"></div>
@@ -89,7 +67,8 @@
         <div class="padre">
             <div class="fundoMascarado1"></div>
             <div class="container">
-                <p class="descricaoJogo">Ao encontrar um corpo no mesmo local, um broche vermelho brilhante, familiar, é encontrado.</p>
+                <p class="descricaoJogo">Ao encontrar um corpo no mesmo local, um broche vermelho brilhante, familiar, é
+                    encontrado.</p>
 
                 <button class="botao" onclick="pegar()">Pegar item</button>
             </div>
@@ -98,13 +77,23 @@
         <div class="capela">
             <div class="fundoMascarado1"></div>
             <div class="container">
-                <p class="descricaoJogo">Em meio às ruas de Yharnam, surge uma figura familiar, mas nada acolhedora.
-                    Armado e atento, Father Gascoigne é um caçador como você — ou, talvez, aquilo em que todo caçador
-                    inevitavelmente se torna.</p>
+                <p class="descricaoJogo">A Capela de Oedon, um lugar amigável, onde as feras não são bem vindas, um
+                    lugar seguro para abrigar moradores onde ainda não está com a sanidade totalmente abalada.</p>
 
                 <button class="botao" onclick="tocarMusica()">atacar</button>
             </div>
         </div>
+
+        <div class="amelia">
+            <div class="fundoMascarado1"></div>
+            <div class="container">
+                <p class="descricaoJogo">A Capela de Oedon, um lugar amigável, onde as feras não são bem vindas, um
+                    lugar seguro para abrigar moradores onde ainda não está com a sanidade totalmente abalada.</p>
+
+                <button class="botao" onclick="tocarMusica()">atacar</button>
+            </div>
+        </div>
+
 
 
 
@@ -114,3 +103,9 @@
 </body>
 
 </html>
+
+<script>
+
+
+
+</script>
