inicio bloodborne finalizada

--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
@@ -8,64 +8,64 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="indexBloodborne">
 
 
     <div class="nav">
-
-        <li class="agora">
-            <a href="#">Inicial</a>
-        </li>
-        <li>
-            <a href="login.html">Login</a>
-        </li>
-        <li>
-            <a href="cadastro.html">Cadastro</a>
-        </li>
+        <div class="navegacao">
+            <li>
+                <a href="index.html">Inicial</a>
+            </li>
+            <li>
+                <a href="login.html">Login</a>
+            </li>
+            <li>
+                <a href="cadastro.html">Cadastro</a>
+            </li>
+        </div>
 
         <h1>Bloodborne</h1>
 
-        <div>
-
-            <hr>
-
-        </div>
 
     </div>
 
     <div class="conteudo">
 
-        <div>
-
-            Desenvolvido pela grandiosa Fromsoftware, Bloodborne mostra com primor como contar histórias sem o uso de
-            uma narrativa convencional, sendo a principal ferramenta, a direção de arte.
-
-        </div>
-
-        <div>
-
-            De início, as ordens são claras, cace e não faça perguntas, não é necessário. Afinal, somos apenas caçadores
-            de feras
+        <div class="banner">
+            <div class="container">
+                Desenvolvido pela grandiosa Fromsoftware, Bloodborne mostra com primor como contar histórias sem o uso
+                de
+                uma narrativa convencional, sendo a principal ferramenta, a direção de arte.
+            </div>
+            <video autoplay loop playsinline muted class="videoFundo">
+                <source src="./assets/videos/Bloodborne™ Opening  Cinematic.mp4" type="video/mp4">
+            </video>
 
         </div>
 
-        <div>
+
+        <div class="contexto">
 
             <h2>Contexto</h2>
 
-            <div>
-                Yharnam, outrora uma cidade esquecida, tornou-se o centro das atenções do mundo após a descoberta de um
-                líquido milagroso: um sangue capaz de curar todas as enfermidades conhecidas. A promessa de cura atraiu
-                peregrinos, estudiosos e desesperados de todas as partes, transformando a cidade em um polo de medicina
-                e esperança. Contudo, por trás desse aparente milagre, escondem-se segredos obscuros e horrores
-                indescritíveis que lentamente emergem das entranhas da cidade.
+            <div class="container">
+                <img src="./assets/imagens/bloodborne/bloodborne_minister4.jpg">
+
+                <p>Yharnam, outrora uma cidade esquecida, tornou-se o centro das atenções do mundo após a descoberta de
+                    um
+                    líquido milagroso: um sangue capaz de curar todas as enfermidades conhecidas. A promessa de cura
+                    atraiu
+                    peregrinos, estudiosos e desesperados de todas as partes, transformando a cidade em um polo de
+                    medicina
+                    e esperança. Contudo, por trás desse aparente milagre, escondem-se segredos obscuros e horrores
+                    indescritíveis que lentamente emergem das entranhas da cidade.</p>
             </div>
 
         </div>
 
-        <div>
+        <div class="arte">
             <h2>Direção de Arte: A Cidade que Conta a História</h2>
-            <div>
+            <div class="container">
                 Em Bloodborne, cada rua, prédio e criatura transmite parte da narrativa. A arquitetura gótica, os becos
                 escuros e as ruas vazias falam sobre a decadência de Yharnam. Não há necessidade de longas falas: o
                 ambiente é quem guia o jogador.
@@ -74,19 +74,26 @@
             </div>
         </div>
 
-        <div>
+        <div class="mecanica">
             <h2>Mecânicas que Reforçam a Narrativa</h2>
-            <div>
-                Bloodborne quebra com convenções tradicionais, eliminando escudos e incentivando a agressividade. O
-                combate rápido, visceral e sangrento não é só mecânico, mas uma extensão da própria ambientação.
-                A regeneração de vida ao atacar, por exemplo, transmite a ideia de sobrevivência a qualquer custo.
-                Até as armas transformáveis mostram o quanto adaptação é essencial para quem ousa caçar as feras.
+            <div class="container">
+                <div>
+                    <img src="./assets/imagens/bloodborne/bloodborne_gif.gif">
+                    <img src="./assets/imagens/bloodborne/bloodborne_gif2.gif">
+                </div>
+
+                <p>Bloodborne quebra com convenções tradicionais, eliminando escudos e incentivando a agressividade. O
+                    combate rápido, visceral e sangrento não é só mecânico, mas uma extensão da própria ambientação.
+                    A regeneração de vida ao atacar, por exemplo, transmite a ideia de sobrevivência a qualquer custo.
+                    Até as armas transformáveis mostram o quanto adaptação é essencial para quem ousa caçar as feras.
+                </p>
+
             </div>
         </div>
 
-        <div>
+        <div class="horror">
             <h2>O Horror Cósmico e o Medo do Desconhecido</h2>
-            <div>
+            <div class="container">
                 À medida que o jogador avança, a narrativa de Bloodborne se transforma, indo do horror gótico clássico
                 ao terror cósmico inspirado na obra de H.P. Lovecraft.
                 Criaturas incompreensíveis, planos de existência ocultos e segredos esquecidos revelam que os
@@ -96,77 +103,101 @@
 
         <div class="areas">
             <h2>Principais Locais de Yharnam e Além</h2>
-            <div class="container">
+            <div class="divisao">
                 <div class="area central">
-                    <h3>Distrito Central</h3>
-                    O coração de Yharnam, onde os primeiros passos do Caçador são dados. Ruas labirínticas, arquitetura
-                    gótica e uma sensação constante de claustrofobia dominam este espaço.
+                    <div class="container">
+                        <h3>Yharnam Central</h3>
+                        O coração de Yharnam, onde os primeiros passos do Caçador são dados. Ruas labirínticas,
+                        arquitetura
+                        gótica e uma sensação constante de claustrofobia dominam este espaço.
+                    </div>
                 </div>
 
                 <div class="area antiga">
-                    <h3>Velho Yharnam</h3>
+                    <div class="container">
+                        <h3>Antiga Yharnam</h3>
 
-                    Uma parte da cidade consumida pelo fogo, isolada para conter a praga das feras. Caminhar por essas
-                    ruínas é testemunhar o desespero de uma cidade que sacrificou seus próprios cidadãos.
+                        Uma parte da cidade consumida pelo fogo, isolada para conter a praga das feras. Caminhar por
+                        essas
+                        ruínas é testemunhar o desespero de uma cidade que sacrificou seus próprios cidadãos.
+                    </div>
                 </div>
             </div>
 
-            <div class="container">
+            <div class="divisao">
                 <div class="area catedral">
-                    <h3>Catedral e o Bairro da Igreja</h3>
+                    <div class="container">
+                        <h3>Catedral e o Bairro da Igreja</h3>
 
-                    O epicentro das experiências com o sangue sagrado, lar da Igreja da Cura. Aqui, os mistérios sobre a
-                    origem do sangue e sua verdadeira natureza começam a ser revelados.
+                        O epicentro das experiências com o sangue sagrado, lar da Igreja da Cura. Aqui, os mistérios
+                        sobre a
+                        origem do sangue e sua verdadeira natureza começam a ser revelados.
+                    </div>
                 </div>
 
                 <div class="area academia">
-                    <h3>Academia de Byrgenwerth</h3>
-                    Um antigo centro acadêmico onde tudo começou. Foi em Byrgenwerth que os estudiosos descobriram os
-                    restos
-                    da Grande Cidadela subterrânea e o sangue antigo, desencadeando a tragédia que assolou Yharnam.
+                    <div class="container">
+                        <h3>Academia de Byrgenwerth</h3>
+                        Um antigo centro acadêmico onde tudo começou. Foi em Byrgenwerth que os estudiosos descobriram
+                        os
+                        restos
+                        da Grande Cidadela subterrânea e o sangue antigo, desencadeando a tragédia que assolou Yharnam.
+                    </div>
                 </div>
             </div>
 
-            <div class="container">
+            <div class="divisao">
                 <div class="area mensis">
-                    <h3>O Pesadelo de Mensis</h3>
-                    Criado pelos estudiosos da Escola de Mensis, liderados por Micolash, este pesadelo é uma dimensão
-                    distorcida, cheia de horrores cósmicos. A tentativa desesperada da escola de entrar em contato com
-                    entidades superiores levou à loucura e à corrupção.
+                    <div class="container">
+                        <h3>O Pesadelo de Mensis</h3>
+                        Criado pelos estudiosos da Escola de Mensis, liderados por Micolash, este pesadelo é uma
+                        dimensão
+                        distorcida, cheia de horrores cósmicos. A tentativa desesperada da escola de entrar em contato
+                        com
+                        entidades superiores levou à loucura e à corrupção.
+                    </div>
                 </div>
 
 
 
                 <div class="area sonho">
-                    <h3>O Sonho do Caçador</h3>
-                    Um refúgio etéreo onde o Caçador repousa e se prepara. Guiado por Gehrman e pela Boneca, é um espaço
-                    de
-                    descanso e reflexão, mas também um lembrete de que a caçada jamais termina.
+                    <div class="container">
+                        <h3>O Sonho do Caçador</h3>
+                        Um refúgio etéreo onde o Caçador repousa e se prepara. Guiado por Gehrman e pela Boneca, é um
+                        espaço
+                        de
+                        descanso e reflexão, mas também um lembrete de que a caçada jamais termina.
+                    </div>
                 </div>
             </div>
 
-            <div class="container">
+            <div class="divisao">
 
                 <div class="area yahargul">
-                    <h3>Yahar'gul</h3>
-                    Yahar'gul, a Vila Invisível
-                    Um local oculto onde cultistas realizam rituais insanos em busca de transcendência. Estruturas
-                    retorcidas e horrores cósmicos revelam a face mais sombria de Yharnam.
+                    <div class="container">
+                        <h3>Yahar'gul</h3>
+                        Yahar'gul, a Vila Invisível
+                        Um local oculto onde cultistas realizam rituais insanos em busca de transcendência. Estruturas
+                        retorcidas e horrores cósmicos revelam a face mais sombria de Yharnam.
+                    </div>
                 </div>
 
                 <div class="area pesadelo">
-                    <h3>O Pesadelo do Caçador</h3>
-                    Uma dimensão onírica onde os caçadores aprisionados vivem e morrem eternamente, presos pela maldição
-                    do
-                    sangue. Este local reflete o sofrimento e a glória daqueles que dedicaram suas vidas à caçada.
+                    <div class="container">
+                        <h3>O Pesadelo do Caçador</h3>
+                        Uma dimensão onírica onde os caçadores aprisionados vivem e morrem eternamente, presos pela
+                        maldição
+                        do
+                        sangue. Este local reflete o sofrimento e a glória daqueles que dedicaram suas vidas à caçada.
+                    </div>
                 </div>
 
             </div>
         </div>
 
-        <div>
+        <div class="cacador">
             <h2>A Figura do Caçador</h2>
-            <div>
+            <div class="container">
                 Sem nome ou passado, o Caçador representa o jogador inserido nessa espiral de loucura.
                 A sua jornada é marcada não por palavras, mas por sangue, escolhas e descobertas feitas no silêncio das
                 ruas vazias de Yharnam.
