atualizando a simulaçao de bloodborne

--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne.html
@@ -204,6 +204,17 @@
             </div>
         </div>
 
+        <div class="simulacao">
+
+            <h2>Simulação</h2>
+            <div class="container">
+                Para uma maior imersão ao universo do jogo, onde não há uma explicação clara sobre o caminho, foi preparado uma silumação das funcionalidades do jogo, mostrando diferentes finais e acontecimentos do jogo.
+
+                <button class="botao" onclick="iniciar()">Iniciar</button>
+            </div>
+
+        </div>
+
 
 
     </div>
@@ -212,3 +223,11 @@
 </body>
 
 </html>
+
+<script>
+
+function iniciar(){
+    window.location.href = "bloodborne_imersao.html";
+}
+
+</script>
