--- a/Entre Caçadores, Colossos e Baldurianos/public/bloodborne_imersao.html
+++ b/Entre Caçadores, Colossos e Baldurianos/public/bloodborne_imersao.html
@@ -43,6 +43,23 @@
 
         <div class="espaco"></div>
 
+        <div class="clinica">
+            <h2>Clínica de Iosefka</h2>
+            <div class="container">
+                <div>
+                    <img src="./assets/imagens/bloodborne/bloodborne_clinica.png">
+                    <img src="./assets/imagens/bloodborne/bloodborne_clinica2.png">
+                </div>
+
+                <p>Você desperta em um leito desconhecido, cercado por instrumentos médicos e frascos enigmáticos.
+                    O cheiro de sangue e remédios paira no ar, enquanto passos distantes ecoam pelos corredores vazios.
+                    Este é o início da caçada — um lugar de suposta cura, mas onde a linha entre ciência e horror foi há
+                    muito ultrapassada.
+                </p>
+
+            </div>
+        </div>
+
         <div class="lobo">
             <div class="fundoMascarado6"></div>
             <div class="fundoMascarado5"></div>
